# KNN_R

./: .RData  .Rhistory  .gitignore  DESCRIPTION  Faster_kNN_Implementation.cpp  KNN_Presentation.pptx  KNN_R.Rproj  Main_kNN_Implementation.cpp  NAMESPACE  OpenCL_KNN.cl  OpenCL_KNN.cpp  README.md  configure.win  kNN_Test.cpp  kNN_Test_2.cpp  kNN_Test_3.cpp  kNN_Test_4.cpp  no log.txt  ryanKNNImplementation.R  struthersandrew_76316_11724164_Faster_IExy.R
CUDA/: CMakeLists.txt  DensityApproximation.cu  run.cu  testCuda.cuh
KNN_PACKAGE/: .Rhistory  DESCRIPTION  NAMESPACE  README.txt  configure  configure.win
KNN_PACKAGE/..Rcheck/: 00install.out
KNN_PACKAGE/..Rcheck/CWUKNN/: DESCRIPTION  INDEX  NAMESPACE
KNN_PACKAGE/..Rcheck/CWUKNN/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
KNN_PACKAGE/..Rcheck/CWUKNN/R/: CWUKNN.rdb  CWUKNN.rdx
KNN_PACKAGE/..Rcheck/CWUKNN/help/: AnIndex  CWUKNN.rdb  CWUKNN.rdx  aliases.rds  paths.rds
KNN_PACKAGE/..Rcheck/CWUKNN/html/: 00Index.html
KNN_PACKAGE/R/: KNN_FUNCTION.R  RcppExports.R  zzz.R
KNN_PACKAGE/inst/kernels/: OpenCL_KNN.cl  cudaKernels.ptx
KNN_PACKAGE/man/: Compute_IE.Rd
KNN_PACKAGE/src/: CMakeLists.txt  CPP_KNN.cpp  Makevars  Makevars.win  OpenCL_KNN.cl  OpenCL_KNN.cpp  RcppExports.cpp  cudaKNN.cpp  cudaKNN.cu  cudaKNN.cuh  kernels.cu  library.cpp  library.h  run.cu  symbols.rds  testCuda.cuh
KNN_PACKAGE/tools/: Rconfig.R  UnixConfig.R  WinConfig.R
KNN_PACKAGE/vignettes/: Developer Manual.md  demo.Rmd  user_guide.Rmd  user_guide.bib
R/: RcppExports.R
src/: CPP_KNN.cpp  Makevars  library.cpp  library.h  run.cu
